fix(styles): remove overflow: hidden from tool header elements [ci visual]

--- a/src/styles/tool-header.scss
+++ b/src/styles/tool-header.scss
@@ -94,7 +94,6 @@ $fd-tool-header-object-status-semantic-values: (
     }
 
     max-width: 100%;
-    overflow: hidden;
     height: $fd-tool-header-height;
 
     &:not(:last-child) {
